--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -9,8 +9,8 @@ RUN apt --yes install ruby-full build-essential zlib1g-dev
 RUN apt --yes install curl
 RUN apt --yes install apache2
 RUN gem install jekyll bundler
-RUN npm install -g --silent fsh-sushi
-RUN npm install -g --silent fhirpath
+RUN npm install -g --silent fsh-sushi@3.6.1
+RUN npm install -g --silent fhirpath@3.10.1
 RUN apt --yes install apache2
 RUN apt --yes install dos2unix
 COPY exemplo.sh .
